--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-      <header style="margin: 20">
+      <header style="margin: 20px">
         <a href="https://pilpod.github.io/Privacy-Policy-GolfApp/">Privacy Policy</a> <span> / </span> <a href="https://pilpod.github.io/Privacy-Policy-GolfApp/terms_conditions.html">Terms & Conditions</a>
       </header>
       
